Prevent footnote marks from affecting line spacing
Prevent footnote marks (and superscripts in general) from affecting
interline spacing.  See <https://stackoverflow.com/a/6594576>.

--- a/assets/main.css
+++ b/assets/main.css
@@ -29,6 +29,10 @@ p {
   hyphens: auto;
 }
 
+sup {
+  line-height: 0;
+}
+
 /* Make sure full justification is disabled for these elements. */
 blockquote, blockquote > p, ul, ol, dl, h1, h2, h3, h4, h5, h6 {
   text-align: initial;
